# AUTOMATIC-TRASHCAN

./: .gitattributes  CMakeLists.txt  README.md  sketch.ino
include/: trash_can.h
src/: main.cpp
